test/corpus/statement.txt
==================
Variable assignment
==================

xyz = abc

------------------

(source_file
  (code
    (statement
      (assignment
        (variable)
        (expression
          (nular_expression
            (variable)))))))

==================
Variable assignment
==================

private _xyz = abc

------------------

(source_file
  (code
    (statement
      (assignment
        (assignment_modifier)
        (variable)
        (expression
          (nular_expression
            (variable)))))))

==================
Invalid variable assignment
:error
==================

qwerty _xyz = abc

------------------

==================
Variable
==================

_xyz

------------------

(source_file
  (code
    (statement
      (expression
        (nular_expression
          (variable))))))

==================
Nular command
==================

isServer

------------------

(source_file
  (code
    (statement
      (expression
        (nular_expression
          (alphanumeric_nular_command))))))

==================
Unary command
==================

setViewDistance abc

------------------

(source_file
  (code
    (statement
      (expression
        (unary_expression
          (alphanumeric_unary_command)
          (expression
            (nular_expression
              (variable))))))))

==================
Invalid unary command
:error
==================

nonexistent abc

------------------

==================
Binary command
==================

xyz addWeaponCargo abc

------------------

(source_file
  (code
    (statement
      (expression
        (binary_expression
          (expression
            (nular_expression
              (variable)))
          (alphanumeric_binary_command_4)
          (expression
            (nular_expression
              (variable))))))))

==================
Invalid binary command
:error
==================

xyz nonexistent abc

------------------

==================
Binary command precedence
==================

1 + 2 * 3

------------------

(source_file
  (code
    (statement
      (expression
        (binary_expression
          (expression
            (nular_expression
              (number)))
          (special_binary_command_6)
          (expression
            (binary_expression
              (expression
                (nular_expression
                  (number)))
              (special_binary_command_7)
              (expression
                (nular_expression
                  (number))))))))))

==================
Binary command precedence
==================

1 * 2 + 3

------------------

(source_file
  (code
    (statement
      (expression
        (binary_expression
          (expression
            (binary_expression
              (expression
                (nular_expression
                  (number)))
              (special_binary_command_7)
              (expression
                (nular_expression
                  (number)))))
          (special_binary_command_6)
          (expression
            (nular_expression
              (number))))))))

==================
Binary and unary command precedence
==================

array select count another

------------------

(source_file
  (code
    (statement
      (expression
        (binary_expression
          (expression
            (nular_expression
              (variable)))
          (alphanumeric_binary_command_4)
          (expression
            (unary_expression
              (alphanumeric_unary_command)
              (expression
                (nular_expression
                  (variable))))))))))

==================
Binary and unary command ambiguity
==================

array select call func

------------------

(source_file
  (code
    (statement
      (expression
        (binary_expression
          (expression
            (nular_expression
              (variable)))
          (alphanumeric_binary_command_4)
          (expression
            (unary_expression
              (alphanumeric_unary_command)
              (expression
                (nular_expression
                  (variable))))))))))

==================
Binary and unary command ambiguity
==================

isPlayer call func

------------------

(source_file
  (code
    (statement
      (expression
        (unary_expression
          (alphanumeric_unary_command)
          (expression
            (unary_expression
              (alphanumeric_unary_command)
              (expression
                (nular_expression
                  (variable))))))))))

==================
Binary and unary command ambiguity
==================

args call func

------------------

(source_file
  (code
    (statement
      (expression
        (binary_expression
          (expression
            (nular_expression
              (variable)))
          (alphanumeric_binary_command_4)
          (expression
            (nular_expression
              (variable))))))))

==================
Private command
==================

private abc

------------------

(source_file
  (code
    (statement
      (expression
        (unary_expression
          (alphanumeric_unary_command)
          (expression
            (nular_expression
              (variable))))))))

==================
If statement
==================

if (abc > 6) then {
    abc = 2;
}

------------------

(source_file
  (code
    (statement
      (expression
        (binary_expression
          (expression
            (unary_expression
              (alphanumeric_unary_command)
              (expression
                (nular_expression
                  (parentheses_expression
                    (expression
                      (binary_expression
                        (expression
                          (nular_expression
                            (variable)))
                        (special_binary_command_3)
                        (expression
                          (nular_expression
                            (number))))))))))
          (alphanumeric_binary_command_4)
          (expression
            (nular_expression
              (code_block
                (code
                  (statement
                    (assignment
                      (variable)
                      (expression
                        (nular_expression
                          (number))))))))))))))

==================
If else statement
==================

if (abc > 6) then {
    abc = 2;
} else {
    abc = 1;
}

------------------

(source_file
  (code
    (statement
      (expression
        (binary_expression
          (expression
            (unary_expression
              (alphanumeric_unary_command)
              (expression
                (nular_expression
                  (parentheses_expression
                    (expression
                      (binary_expression
                        (expression
                          (nular_expression
                            (variable)))
                        (special_binary_command_3)
                        (expression
                          (nular_expression
                            (number))))))))))
          (alphanumeric_binary_command_4)
          (expression
            (binary_expression
              (expression
                (nular_expression
                  (code_block
                    (code
                      (statement
                        (assignment
                          (variable)
                          (expression
                            (nular_expression
                              (number)))))))))
              (alphanumeric_binary_command_5)
              (expression
                (nular_expression
                  (code_block
                    (code
                      (statement
                        (assignment
                          (variable)
                          (expression
                            (nular_expression
                              (number))))))))))))))))
